# qhints

./: .gitignore  CLAUDE.md  README.md  context.md
hints/: constants.py  hints.py  mouse.py  mouse_service.py  utils.py
hints/backends/: atspi.py
hints/huds/: overlay.py
hints/window_systems/: x11.py
qhints-rs/: Cargo.toml  check.err  context.md
qhints-rs/src/: child.rs  config.rs  hints.rs  main.rs  mouse.rs  test.rs
qhints-rs/src/backend/: atspi.rs  imageproc.rs  mod.rs
qhints-rs/src/overlay/: drawing.rs  mod.rs
qhints-rs/src/window_system/: mod.rs  x11.rs
